# argus

./: .gitignore  Project Argus Tech Spec.md  README.md  SUBMISSION.md
.claude/: CLAUDE.md
.github/workflows/: deploy.yml
argus-incident-responder/: .gcloudignore  architecture.md  cloudbuild.yaml
argus-incident-responder/backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
argus-incident-responder/backend/app/: config.py  firewall.py  gemini.py  incidents.py  main.py  state.py  tools.py
argus-incident-responder/backend/tests/: conftest.py  test_api.py  test_bq_tools.py  test_firewall.py  test_incidents.py  test_tools.py
argus-incident-responder/frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
argus-incident-responder/frontend/src/: App.jsx  firebase.js  index.css
argus-incident-responder/frontend/src/components/: AgentPanel.jsx  DeviceCard.jsx  DeviceCard.test.jsx  FloatingAgent.jsx  NetworkTable.jsx  NetworkTable.test.jsx  SectionHeader.jsx  SectionHeader.test.jsx  SummaryChart.jsx  ThreatCard.jsx  ThreatCard.test.jsx  TranscriptFeed.jsx  TranscriptFeed.test.jsx
argus-incident-responder/frontend/src/hooks/: useActiveConnections.js  useAudio.js  useWebSocket.js
argus-incident-responder/frontend/src/test/: setup.js
argus-incident-responder/scripts/: generate_mock_data.py  setup_gcp.sh  setup_service_account.sh  setup_wif.sh
docs/architecture/: architecture.excalidraw  architecture.html
