[project]
name = "argus-backend"
version = "0.1.0"
description = "Project Argus — SOC AI Agent backend"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0,<14.0",
    "google-genai>=0.5.0",
    "google-cloud-bigquery>=3.20.0",
    "python-dotenv>=1.0.0",
    "faker>=25.0.0",
    "wsproto>=1.3.2",
]

[tool.uv]
dev-dependencies = []
